WIP further adjustments